--- a/myTest/myTest.csproj
+++ b/myTest/myTest.csproj
@@ -22,6 +22,16 @@
   </Target>
   
   <ItemGroup>
+    <None Remove="Storage\lib\bootstrap3-typeahead.min.js" />
+    <None Remove="Storage\Settings\external_WeatherLocations\WeatherLocations.json" />
+  </ItemGroup>
+  
+  <ItemGroup>
+    <EmbeddedResource Include="Storage\lib\bootstrap3-typeahead.min.js" />
+    <EmbeddedResource Include="Storage\Settings\external_WeatherLocations\WeatherLocations.json" />
+  </ItemGroup>
+  
+  <ItemGroup>
     <ProjectReference Include="..\Ooui\Ooui.csproj" />
   </ItemGroup>
 
