--- a/myTest/myTest.csproj
+++ b/myTest/myTest.csproj
@@ -36,7 +36,7 @@
   </ItemGroup>
   
   <ItemGroup>
-    <Folder Include="Storage\WateringWeb\Overview\" />
+    <Folder Include="Storage\WateringWeb\Manual\" />
   </ItemGroup>
 
 </Project>
