--- a/PiWeb/PiWeb.csproj
+++ b/PiWeb/PiWeb.csproj
@@ -23,17 +23,18 @@
   </Target>
   
   <ItemGroup>
+    <None Remove="Storage\external_WeatherLocations\WeatherLocations.json" />
     <None Remove="Storage\lib\bootstrap3-typeahead.min.js" />
-    <None Remove="Storage\WateringWeb\Settings\external_WeatherLocations\WeatherLocations.json" />
   </ItemGroup>
   
   <ItemGroup>
+    <EmbeddedResource Include="Storage\external_WeatherLocations\WeatherLocations.json" />
     <EmbeddedResource Include="Storage\lib\bootstrap3-typeahead.min.js" />
-    <EmbeddedResource Include="Storage\WateringWeb\Settings\external_WeatherLocations\WeatherLocations.json" />
   </ItemGroup>
   
   <ItemGroup>
     <ProjectReference Include="..\myOoui\myOoui.csproj" />
+    <ProjectReference Include="..\PiWebDataTypes\PiWebDataTypes.csproj" />
   </ItemGroup>
 
 </Project>
