Added HistoryController and Upgraded UiComponents.Table Added Logging to PiWeb

--- a/myOoui/myOoui.csproj
+++ b/myOoui/myOoui.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\baseOoui\Ooui\Ooui.csproj" />
+    <ProjectReference Include="..\PiWebDataTypes\PiWebDataTypes.csproj" />
   </ItemGroup>
 
 </Project>
