--- a/PiWebDataTypes/PiWebDataTypes.csproj
+++ b/PiWebDataTypes/PiWebDataTypes.csproj
@@ -2,10 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
+    <RootNamespace>TabNoc.PiWeb.DataTypes</RootNamespace>
   </PropertyGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\myOoui\myOoui.csproj" />
-  </ItemGroup>
 
 </Project>
