--- a/WateringWebServer/WateringWebServer.csproj
+++ b/WateringWebServer/WateringWebServer.csproj
@@ -21,4 +21,8 @@
 
   <ProjectExtensions><VisualStudio><UserProperties /></VisualStudio></ProjectExtensions>
 
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+    <Exec Command="if /I $(ConfigurationName) EQU Release (&#xD;&#xA;    cd $(ProjectDir)&#xD;&#xA;    mkdir bin\PiDeployment\&#xD;&#xA;    copy Dockerfile bin\PiDeployment\Dockerfile&#xD;&#xA;    dotnet publish -r linux-arm --output bin/PiDeployment/netcoreapp2.1&#xD;&#xA;    REM dotnet publish --configuration Release -r linux-arm&#xD;&#xA;    &quot;C:\_\winscp577\publish2.bat&quot;&#xD;&#xA;)" />
+  </Target>
+
 </Project>
